Table user {
  id uuid [primary key]
  email varchar(255) [unique, not null]
  is_active boolean [not null, default: true]
  is_superuser boolean [not null, default: false]
  full_name varchar(255)
  hashed_password varchar [not null]
}

Table item {
  id uuid [primary key]
  title varchar(255) [not null]
  description varchar(255)
  owner_id uuid [not null, ref: > user.id]
}

Table worklog {
  id uuid [primary key]
  user_id uuid [not null, ref: > user.id]
  task_id varchar(255) [not null]
  remittance_status varchar(50) [not null]
  created_at datetime [not null]
}

Table timesegment {
  id uuid [primary key]
  worklog_id uuid [not null, ref: > worklog.id]
  amount decimal(10,2) [not null]
  is_deleted boolean [not null, default: false]
  created_at datetime [not null]
}

Table adjustment {
  id uuid [primary key]
  worklog_id uuid [not null, ref: > worklog.id]
  amount decimal(10,2) [not null]
  reason varchar(500)
  created_at datetime [not null]
}

Table remittance {
  id uuid [primary key]
  user_id uuid [not null, ref: > user.id]
  worklog_id uuid [ref: > worklog.id]
  remittance_date datetime [not null]
  amount decimal(10,2) [not null]
  status varchar(50) [not null]
  created_at datetime [not null]
}
